fix: hide svg overflow

--- a/assets/src/css/admin/summer-sales-banner.scss
+++ b/assets/src/css/admin/summer-sales-banner.scss
@@ -6,6 +6,8 @@
     & ::after {
         box-sizing: border-box;
     }
+
+    overflow: hidden;
 }
 
 .give-sale-banner {
